Fix width of page description on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -274,7 +274,7 @@ section.donation-card {
         margin-right: 0;
     }
 
-    section.page-description p {
+    section.page-title p {
         width: 85vw;
     }
 }
